--- a/mycookbook/templates/default/index.html.erb
+++ b/mycookbook/templates/default/index.html.erb
@@ -1,4 +1,10 @@
 <html>
+  <head>
+		<title>My Instance Details </title>
+		<style type="text/css">
+				body { color: white; background-color:  #0F6AC6 }
+		</style>
+	</head>
 	<body>
 		<h1> <%= node['fqdn'] %></h1><br>
 	<h3>attributes defined in attributes/default.rb file</h3>
